[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-power-allocation"
version = "0.1.0"
description = "Multi-agent power allocation with DRL"
authors = [
  { name = "Nguyen Duc Tai", email = "ductaingn.015203@gmail.com" }
]
maintainers = [
  { name = "Nguyen Duc Tai", email = "ductaingn.015203@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "torch",
  "ray[rllib]",
  "gymnasium",
  "pettingzoo"
]

[tool.setuptools.packages.find]
where = ["src"]